app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: api
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  type: ClusterIP
