app/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
    app: api
  annotations:
    kubernetes.io/ingress.class: haproxy
spec:
  rules:
  - host: test-$USER-$PROJECT-app-api.nrp-nautilus.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 8080
